--- a/style.css
+++ b/style.css
@@ -704,6 +704,10 @@ h6 {
     background-color: white;
 }
 
+.white {
+    color: white;
+}
+
 .bg-grey {
     background-color: grey;
 }
@@ -754,11 +758,11 @@ h6 {
     box-sizing: border-box;
     padding: 20px;
     padding-bottom: 60px;
-    font-size: 28px;
+    font-size: 24px;
 }
 
 .nav-item {
-    padding-left: 1.25rem;
+    padding-left: 1.5rem;
     box-sizing: border-box;
 }
 
@@ -799,10 +803,79 @@ h6 {
     color: black;
 }
 
-.footer {
-    background-color: #6d4145;
+.menu-icon {
+    font-size: 42px;
+    position: absolute;
+    cursor: pointer;
+    top: 7px;
+    right: 20px;
+    z-index: 1000;
+    color: var(--lake);
+    padding-bottom: 2px;
+    font-weight: 500;
 }
 
+.menu-overlay .logo {
+    position: absolute;
+    left: 20px;
+    top: 20px;
+}
+
+.menu-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--two);
+    color: white;
+    display: flex;
+    z-index: 999;
+    align-items: center;
+    overflow-y: hidden;
+}
+
+.menu-overlay nav ul {
+    list-style: none;
+    padding: 0;
+    text-align: left;
+    margin-left: 20px;
+    
+}
+
+.menu-overlay nav ul li {
+    margin-bottom: 1rem;
+}
+
+.menu-overlay nav ul li a {
+    text-decoration: none;
+    color: white;
+    font-size: 36px;
+}
+
+.active p {
+    text-decoration: underline;
+    text-decoration-color: var(--lake) ;
+    text-underline-offset: 3px;
+    text-decoration-thickness: 3px;
+    color: var(--lake);
+}
+
+.mobile-menu .active p {
+    text-decoration: none;
+}
+
+.mobile-menu .menu-item:hover {
+    text-decoration: none;
+}
+
+.menu-item:hover {
+    text-decoration: underline;
+    text-decoration-color: var(--lake) ;
+    text-underline-offset: 3px;
+    text-decoration-thickness: 3px;
+    color: var(--lake);
+}
 
 
 /* PAGES */
@@ -838,9 +911,6 @@ h1,h4 {
     margin-left: .5rem;
 }
 
-
-
-
 .email-button {
     box-sizing: border-box;
     padding: 12px 28px;
@@ -849,4 +919,45 @@ h1,h4 {
     color: black;
     text-decoration: none;
     font-weight: bold;
+}
+
+
+
+@media (max-width: 879px) {
+    .menu-nav {
+        display: none;
+    }
+    .page {
+        padding: 20px;
+        padding-bottom: 40px;
+        
+    }
+}
+
+@media (min-width: 880px) {
+    .mobile-menu {
+        display: none;
+    }
+    .web-row {
+        flex-direction: row;
+    }
+    .items {
+        justify-content: space-between;
+        flex-direction: row;
+        text-align: center;
+    }
+    .item {
+        width: 49%;
+        box-sizing: border-box;
+    }
+    .web-50 {
+        width: 50%;
+    }
+
+}
+
+@media (min-width: 1000px) {
+    .header {
+        font-size: 28px;
+    }
 }
